overlap issue solved

--- a/screenFreebusyRoom.css
+++ b/screenFreebusyRoom.css
@@ -166,6 +166,7 @@ body, html{
 
 #info-res {
 	padding-left:5%;
+	width:50%;
 	height:auto;
 	position:absolute;
 	top:55%;
